responsive nav itens layout bug fixed

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -113,6 +113,6 @@
     }
 
     .contato .texto-contato p{
-        font-size: 2.3rem;
+        font-size: 2.2rem;
     }
 }
